* Remove "finally" block from PeriodicalExecuter.onTimerEvent() because it's not needed and fails in IE without a "catch" block. [#421 state:resolved] [jddalton, Ville Koshinen]

* Optimize String#(extractScripts|stripScripts) by minimizing use and caching regular expressions. [#431 state:resolved] [jddalton, MIYAMUKO Katsuyuki]

* Optimize Selector class by removing unused variables, speeding up loops, and taking advantage of the element.children collection. [jddalton]

* Fix Java applet "java.lang.NosuchFieldException" error, in JRE v1.6.0_10, when accessing undefined element properties like "_extendedByPrototype". [#354 state:resolved] [Hilberty, jddalton, kangax, Matt McKeon, Prasad]

* Optimize Element.extend() by reducing the number of "for loops" in the method. [jddalton]

* Implement a revision system in Element.extend() so that elements extended before a Element.addMethods() call will be re-extended when run through Element.extend() again. Closes #9812. [jddalton, vectoroc]

* Add private helper method getOwnerDoc() and utilize element.ownerDocument to allow CSS queries and DOM dom traversal against iframes. Closes #11475. [jddalton]

* Fix regexp in Selector.split() that caused Firefox 3 to freeze. [#408 state:resolved] [jddalton, kangax, Shawazi, William Warby]

* Ensure Form.Element#(select|focus) return an element. [jddalton]

* Optimize method execution speed by using the static Element methods instead of the DOM element methods. [jddalton]

* Optimize Array#clone by using slice() helper method. [jddalton]

* Add private helper methods mergeList and prependList to replace Array#concat usage. [jddalton, Tobie Langel]

* Optimize Function bind, bindAsEventListener, curry, methodize and wrap to avoid Array#concat and Function#apply when not needed. [#215 state:resolved]  [kangax, Tobie Langel]

* Add private helper method nodeListSlice() to complement slice(). [jddalton]

* Cleanup whitespace in source files. [jddalton]
